# sarcm-twitch

./: .gitignore  CMakeLists.txt  readme.md
app/: main.cpp
app/cli/: CMakeLists.txt  cli.cppm
app/core/: CMakeLists.txt
app/core/analysis/: CMakeLists.txt  analysis.cppm
app/core/auth/: CMakeLists.txt  auth.cppm
app/core/connection/: CMakeLists.txt  connection.cppm
app/core/parser/: CMakeLists.txt  parser.cppm
app/core/storage/: CMakeLists.txt  storage.cppm
app/core/storage/entities/: CMakeLists.txt  entities.cppm
